Finishing lab 2 https://github.com/UofUEpiBio/PHS7045-advanced-programming/issues/4 @chipmanj @gvegayon

--- a/03-functions-and-datatable/README.qmd
+++ b/03-functions-and-datatable/README.qmd
@@ -161,14 +161,41 @@ Knit the document, commit your changes, and push them to GitHub.
 1. Load the `data.table` (and the `dtplyr` and `dplyr` packages if you plan to work with those).
 
 2. Load the met data from https://raw.githubusercontent.com/USCbiostats/data-science-data/master/02_met/met_all.gz, and the station data. For the latter, you can use the code we used during the lecture to pre-process the stations' data:
+```{r}
+# Where are we getting the data from
+met_url <- "https://github.com/USCbiostats/data-science-data/raw/master/02_met/met_all.gz"
+
+# Downloading the data to a tempfile (so it is destroyed afterwards)
+# you can replace this with, for example, your own data:
+# tmp <- tempfile(fileext = ".gz")
+tmp <- "met.gz"
+
+# We sould be downloading this, ONLY IF this was not downloaded already.
+# otherwise is just a waste of time.
+if (!file.exists(tmp)) {
+  download.file(
+    url      = met_url,
+    destfile = tmp,
+    # method   = "libcurl", timeout = 1000 (you may need this option)
+  )
+}
+
+# Reading the data
+dat <- fread(tmp)
+head(dat)
+```
 
 ```{r}
 #| label: stations-data
 #| eval: false
 
+library(data.table)
+
 # Download the data
-stations <- fread("ftp://ftp.ncdc.noaa.gov/pub/data/noaa/isd-history.csv")
-stations[, USAF := as.integer(USAF)]
+stations <- fread("ftp://ftp.ncdc.noaa.gov/pub/data/noaa/isd-history.csv") #fread <- fast read. Load the data really fast, in data.table format.
+stations[, USAF := as.integer(USAF)] #USAF is read as character. Change it to integer.
+#Is the station name unique to USAF?
+
 
 # Dealing with NAs and 999999
 stations[, USAF   := fifelse(USAF == 999999, NA_integer_, USAF)]
@@ -188,12 +215,31 @@ stations <- stations[n == 1,][, n := NULL]
 
 3. Merge the data as we did during the lecture.
 
+```{r}
+dat <- merge(
+  # Data
+  x     = dat,      
+  y     = stations, 
+  # List of variables to match
+  by.x  = "USAFID",
+  by.y  = "USAF", 
+  # Which obs to keep?
+  all.x = TRUE,      
+  all.y = FALSE
+  )
+
+head(dat[, list(USAFID, WBAN, STATE)], n = 4)
+
+```
+
 ## Question 1: Representative station for the US
 
 What is the median station in terms of temperature, wind speed, and atmospheric pressure? Look for the three weather stations that best represent the continental US using the `quantile()` function. Do these three coincide?
 
 ```{r}
 
+unique(dat[,temp.qc])
+dat[temp==quantile(x=temp, probs=0.5, na.rm=TRUE),.(USAFID,CTRY)]
 ```
 
 
